tests/snapshots/snapshot_tests__non_git_directory_fails@stderr.snap
---
source: tests/snapshot_tests.rs
expression: stderr
---
<TS> ERROR [rusty_todo_md::cli - src/cli.rs:<LINE>] Error: Error opening repository: could not find repository at '.'; class=Repository (6); code=NotFound (-3)
