tests/snapshots/snapshot_tests__regenerate_wipes_todo_md_conflict_markers.snap
---
source: tests/snapshot_tests.rs
expression: out.todo_md
---
# TODO
## a.rs
* [a.rs:1](a.rs#L1): one
* [a.rs:3](a.rs#L3): two
