tests/snapshots/snapshot_tests__second_run_file_deleted.snap
---
source: tests/snapshot_tests.rs
expression: out.todo_md
---
# TODO
## file1.rs
* [file1.rs:1](file1.rs#L1): Updated Feature A
