tests/snapshots/snapshot_tests__source_file_with_conflict_markers_is_skipped@stderr.snap
---
source: tests/snapshot_tests.rs
expression: stderr
---
rusty-todo-md: skipping a.rs: contains conflict markers
